tests/cases/control-flow/errors/for-range-alias-refutable-pattern.ari
fn main() -> i64 {
  for item @ 2 in range(0, 3) {
    return item;
  }

  return 0;
}
